fix horizontal scroll

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -19,6 +19,12 @@
 
 @media screen and (max-width: 330px) {
   .footer {
-    padding-left: 5%;
+    margin-left: 19px;
+    max-width: 200px;
+    margin-right: 0;
+    padding-left: 0;
+    padding-top: 48px;
+    padding-bottom: 36px;
+    font-size: 14px;
   }
 }
