--- a/blocks/header.css
+++ b/blocks/header.css
@@ -7,3 +7,18 @@
 .header__logo {
   padding-bottom: 37px;
 }
+
+@media screen and (max-width: 320px) {
+  .header {
+    max-height: 84px;
+    margin: 0;
+  }
+
+  .header__logo {
+    margin-top: 28px;
+    margin-left: 27px;
+    max-width: 126px;
+    max-height: 24px;
+    padding-bottom: 32px;
+  }
+}
