--- a/blocks/page.css
+++ b/blocks/page.css
@@ -15,3 +15,9 @@
   position: relative;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 320px) {
+  .page__content {
+    padding: 0;
+  }
+}
